# blackboxaf

./: .gitignore  DISCLAIMER.md  INTEGRATIONS.md  LAUNCH_CHECKLIST.md  LICENSE  QUICKSTART_LLM.md  README.md  build_exe.py  openapi.yaml  pyproject.toml  run.py
marketing/: CHATGPT_WEBSITE_BUILDER_PROMPT.md  ETHICS_GUIDE.md  LLM_FEATURES.md  LOGO_CONCEPTS.md  MONETIZATION_STRATEGY.md  pagecloud-section.html  products-page.html  reddit-launch-post.md
marketing/pagecloud-embeds/: README.md  about-section.html  badges.html  bbaf-cta-buttons.html  bbaf-features-simple.html  bbaf-tagline-footer.html  features-grid.html  integrations.html  roadmap-cards.html
src/blackboxaf/: __init__.py  app.py  config.py  mcp_server.py
src/blackboxaf/api/: ingest.py  llm.py  patterns.py
src/blackboxaf/db/: database.py  models.py
src/blackboxaf/extraction/: anonymizer.py  base.py  build_company_db.py  company_dict.py  scanner.py
src/blackboxaf/extraction/data/: company_names.txt  federal_domains.csv
src/blackboxaf/extraction/parsers/: apex_parser.py  flow_parser.py  layout_parser.py  lwc_parser.py  object_parser.py  report_parser.py  validation_parser.py
src/blackboxaf/frontend/: detail.html  index.html
src/blackboxaf/frontend/css/: style.css
src/blackboxaf/frontend/js/: api.js  detail.js  inventory.js
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
