[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackboxaf"
version = "0.1.0"
description = "Extract reusable Salesforce metadata patterns from SFDX projects"
requires-python = ">=3.10"
authors = [{ name = "C.King Muzic LLC" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["salesforce", "sfdx", "metadata", "patterns", "flows", "apex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25",
    "pyinstaller>=6.0",
]
ai = [
    "anthropic>=0.40.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ckingmuzic/blackboxaf"
Repository = "https://github.com/ckingmuzic/blackboxaf"

[project.scripts]
blackboxaf = "blackboxaf.app:main"
blackboxaf-mcp = "blackboxaf.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blackboxaf = [
    "frontend/**/*.html",
    "frontend/**/*.css",
    "frontend/**/*.js",
]
